package com.ximofam.graduation_project.users.enums;

public enum Gender {
    MALE,
    FEMALE
}
