@startuml
title User Domain Model

class BaseModel {
    # id : Long
    # createdAt : Instant
    # updatedAt : Instant
}

class SoftDeleteModel {
    # deletedAt : Instant
}

class User {
    - username : String
    - email : String
    - passwordHash : String
    - role : UserRole
    - isActive : boolean
    - isLocked : boolean
}

class UserProfile {
    - avatarPublicId: String
    - avatarUrl: String
    - fullName: String
    - gender: Gender
    - dateOfBirth: LocalDate
}

class RefreshToken {
    - tokenHash : String
    - expiresAt : Instant
    - isRevoked : Boolean
    --
    +isExpired() : boolean
    +isRevoked() : boolean
}

enum Gender {
    MALE
    FEMALE
}

enum UserRole {
    SUPERUSER
    ADMIN
    USER
}

BaseModel <|-l- SoftDeleteModel
SoftDeleteModel <|-- User

BaseModel <|-- RefreshToken

UserProfile --> Gender
User --> UserRole
User *-l- "1" UserProfile : has >
User "1" <-r- "*" RefreshToken : owns

@enduml